[gd_scene load_steps=15 format=2]

[ext_resource path="res://level/blocks/PasilloSeguridad.gd" type="Script" id=1]
[ext_resource path="res://level/blocks/TrampaPanel.gd" type="Script" id=2]
[ext_resource path="res://level/blocks/Trampa.glb" type="PackedScene" id=3]
[ext_resource path="res://level/Objetos/Turret.tscn" type="PackedScene" id=4]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( -0.25, 1, -1.3, -0.25, -1, 1.3, -0.25, -1, -1.3, -0.25, 1, -1.3, -0.25, 1, 1.3, -0.25, -1, 1.3, 0.25, 1, -1.3, -0.25, -1, -1.3, 0.25, -1, -1.3, 0.25, 1, -1.3, -0.25, 1, -1.3, -0.25, -1, -1.3, 0.25, 1, 1.3, 0.25, -1, -1.3, 0.25, -1, 1.3, 0.25, 1, 1.3, 0.25, 1, -1.3, 0.25, -1, -1.3, -0.25, 1, 1.3, 0.25, -1, 1.3, -0.25, -1, 1.3, -0.25, 1, 1.3, 0.25, 1, 1.3, 0.25, -1, 1.3, -0.25, -1, 1.3, 0.25, -1, -1.3, -0.25, -1, -1.3, -0.25, -1, 1.3, 0.25, -1, 1.3, 0.25, -1, -1.3, 0.25, 1, 1.3, -0.25, 1, -1.3, 0.25, 1, -1.3, 0.25, 1, 1.3, -0.25, 1, 1.3, -0.25, 1, -1.3 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -0.25, 1, -1.3, -0.25, -1, 1.3, -0.25, -1, -1.3, -0.25, 1, -1.3, -0.25, 1, 1.3, -0.25, -1, 1.3, 0.25, 1, -1.3, -0.25, -1, -1.3, 0.25, -1, -1.3, 0.25, 1, -1.3, -0.25, 1, -1.3, -0.25, -1, -1.3, 0.25, 1, 1.3, 0.25, -1, -1.3, 0.25, -1, 1.3, 0.25, 1, 1.3, 0.25, 1, -1.3, 0.25, -1, -1.3, -0.25, 1, 1.3, 0.25, -1, 1.3, -0.25, -1, 1.3, -0.25, 1, 1.3, 0.25, 1, 1.3, 0.25, -1, 1.3, -0.25, -1, -1.3, 0.25, -1, 1.3, 0.25, -1, -1.3, -0.25, -1, 1.3, 0.25, -1, 1.3, -0.25, -1, -1.3, 0.25, 1, 1.3, -0.25, 1, -1.3, 0.25, 1, -1.3, 0.25, 1, 1.3, -0.25, 1, 1.3, -0.25, 1, -1.3 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 0.7222, 0.0556, 0.7222, -0.7222, 0.0556, -0.7222, 0.7222, 0.0556, -0.7222, 0.7222, 0.0556, 0.7222, -0.7222, 0.0556, 0.7222, -0.7222, 0.0556, -0.7222, -0.7222, -0.0556, 0.7222, 0.7222, -0.0556, -0.7222, -0.7222, -0.0556, -0.7222, -0.7222, -0.0556, 0.7222, 0.7222, -0.0556, 0.7222, 0.7222, -0.0556, -0.7222, 0.7222, 0.0556, 0.7222, 0.7222, -0.0556, -0.7222, 0.7222, -0.0556, 0.7222, 0.7222, 0.0556, 0.7222, 0.7222, 0.0556, -0.7222, 0.7222, -0.0556, -0.7222, -0.7222, 0.0556, -0.7222, -0.7222, -0.0556, 0.7222, -0.7222, -0.0556, -0.7222, -0.7222, 0.0556, -0.7222, -0.7222, 0.0556, 0.7222, -0.7222, -0.0556, 0.7222, 0.7222, 0.0556, -0.7222, -0.7222, -0.0556, -0.7222, 0.7222, -0.0556, -0.7222, 0.7222, 0.0556, -0.7222, -0.7222, 0.0556, -0.7222, -0.7222, -0.0556, -0.7222, -0.7222, 0.0556, 0.7222, 0.7222, -0.0556, 0.7222, -0.7222, -0.0556, 0.7222, -0.7222, 0.0556, 0.7222, 0.7222, 0.0556, 0.7222, 0.7222, -0.0556, 0.7222 )

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( 0.7222, 0.0556, 0.7222, -0.7222, 0.0556, -0.7222, 0.7222, 0.0556, -0.7222, 0.7222, 0.0556, 0.7222, -0.7222, 0.0556, 0.7222, -0.7222, 0.0556, -0.7222, -0.7222, -0.0556, 0.7222, 0.7222, -0.0556, -0.7222, -0.7222, -0.0556, -0.7222, -0.7222, -0.0556, 0.7222, 0.7222, -0.0556, 0.7222, 0.7222, -0.0556, -0.7222, 0.7222, 0.0556, 0.7222, 0.7222, -0.0556, -0.7222, 0.7222, -0.0556, 0.7222, 0.7222, 0.0556, 0.7222, 0.7222, 0.0556, -0.7222, 0.7222, -0.0556, -0.7222, -0.7222, 0.0556, -0.7222, -0.7222, -0.0556, 0.7222, -0.7222, -0.0556, -0.7222, -0.7222, 0.0556, -0.7222, -0.7222, 0.0556, 0.7222, -0.7222, -0.0556, 0.7222, 0.7222, 0.0556, -0.7222, -0.7222, -0.0556, -0.7222, 0.7222, -0.0556, -0.7222, 0.7222, 0.0556, -0.7222, -0.7222, 0.0556, -0.7222, -0.7222, -0.0556, -0.7222, -0.7222, 0.0556, 0.7222, 0.7222, -0.0556, 0.7222, -0.7222, -0.0556, 0.7222, -0.7222, 0.0556, 0.7222, 0.7222, 0.0556, 0.7222, 0.7222, -0.0556, 0.7222 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( -0.25, 0.5, -0.4, -0.25, -0.5, 0.4, -0.25, -0.5, -0.4, -0.25, 0.5, -0.4, -0.25, 0.5, 0.4, -0.25, -0.5, 0.4, 0.25, 0.5, -0.4, -0.25, -0.5, -0.4, 0.25, -0.5, -0.4, 0.25, 0.5, -0.4, -0.25, 0.5, -0.4, -0.25, -0.5, -0.4, 0.25, 0.5, 0.4, 0.25, -0.5, -0.4, 0.25, -0.5, 0.4, 0.25, 0.5, 0.4, 0.25, 0.5, -0.4, 0.25, -0.5, -0.4, -0.25, 0.5, 0.4, 0.25, -0.5, 0.4, -0.25, -0.5, 0.4, -0.25, 0.5, 0.4, 0.25, 0.5, 0.4, 0.25, -0.5, 0.4, -0.25, -0.5, 0.4, 0.25, -0.5, -0.4, -0.25, -0.5, -0.4, -0.25, -0.5, 0.4, 0.25, -0.5, 0.4, 0.25, -0.5, -0.4, 0.25, 0.5, 0.4, -0.25, 0.5, -0.4, 0.25, 0.5, -0.4, 0.25, 0.5, 0.4, -0.25, 0.5, 0.4, -0.25, 0.5, -0.4 )

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( -0.25, 0.5, -0.4, -0.25, -0.5, 0.4, -0.25, -0.5, -0.4, -0.25, 0.5, -0.4, -0.25, 0.5, 0.4, -0.25, -0.5, 0.4, 0.25, 0.5, -0.4, -0.25, -0.5, -0.4, 0.25, -0.5, -0.4, 0.25, 0.5, -0.4, -0.25, 0.5, -0.4, -0.25, -0.5, -0.4, 0.25, 0.5, 0.4, 0.25, -0.5, -0.4, 0.25, -0.5, 0.4, 0.25, 0.5, 0.4, 0.25, 0.5, -0.4, 0.25, -0.5, -0.4, -0.25, 0.5, 0.4, 0.25, -0.5, 0.4, -0.25, -0.5, 0.4, -0.25, 0.5, 0.4, 0.25, 0.5, 0.4, 0.25, -0.5, 0.4, -0.25, -0.5, 0.4, 0.25, -0.5, -0.4, -0.25, -0.5, -0.4, -0.25, -0.5, 0.4, 0.25, -0.5, 0.4, 0.25, -0.5, -0.4, 0.25, 0.5, 0.4, -0.25, 0.5, -0.4, 0.25, 0.5, -0.4, 0.25, 0.5, 0.4, -0.25, 0.5, 0.4, -0.25, 0.5, -0.4 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.514349, 0.406681, 0.398816 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 1, 2.9168, 4.00913 )

[sub_resource type="ConcavePolygonShape" id=9]
data = PoolVector3Array( -0.5, 0.5, -0.1, -0.5, -0.5, 0.1, -0.5, -0.5, -0.1, -0.5, 0.5, -0.1, -0.5, 0.5, 0.1, -0.5, -0.5, 0.1, 0.5, 0.5, -0.1, -0.5, -0.5, -0.1, 0.5, -0.5, -0.1, 0.5, 0.5, -0.1, -0.5, 0.5, -0.1, -0.5, -0.5, -0.1, 0.5, 0.5, 0.1, 0.5, -0.5, -0.1, 0.5, -0.5, 0.1, 0.5, 0.5, 0.1, 0.5, 0.5, -0.1, 0.5, -0.5, -0.1, -0.5, 0.5, 0.1, 0.5, -0.5, 0.1, -0.5, -0.5, 0.1, -0.5, 0.5, 0.1, 0.5, 0.5, 0.1, 0.5, -0.5, 0.1, -0.5, -0.5, -0.1, 0.5, -0.5, 0.1, 0.5, -0.5, -0.1, -0.5, -0.5, 0.1, 0.5, -0.5, 0.1, -0.5, -0.5, -0.1, 0.5, 0.5, 0.1, -0.5, 0.5, -0.1, 0.5, 0.5, -0.1, 0.5, 0.5, 0.1, -0.5, 0.5, 0.1, -0.5, 0.5, -0.1 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 3.92313, 3, 3.89388 )

[node name="Trampa" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="Pared-Superior" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Pared-Superior/StaticBody" index="0"]
shape = SubResource( 1 )

[node name="StaticBody" type="StaticBody" parent="Pared-Inferior" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Pared-Inferior/StaticBody" index="0"]
shape = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Suelo" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Suelo/StaticBody" index="0"]
shape = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Techo" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Techo/StaticBody" index="0"]
shape = SubResource( 4 )

[node name="TrampaPanel" parent="." index="4"]
script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="TrampaPanel/PuertaTrampaAbajo" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="TrampaPanel/PuertaTrampaAbajo/StaticBody" index="0"]
shape = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="TrampaPanel/PuertaTrampaArriba" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="TrampaPanel/PuertaTrampaArriba/StaticBody" index="0"]
shape = SubResource( 6 )

[node name="AreaEntrada" type="Area" parent="TrampaPanel" index="2"]

[node name="CollisionShape" type="CollisionShape" parent="TrampaPanel/AreaEntrada" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.72205e-06, 0, 0.543105 )
shape = SubResource( 7 )

[node name="AreaSalida" type="Area" parent="TrampaPanel" index="3"]

[node name="CollisionShape" type="CollisionShape" parent="TrampaPanel/AreaSalida" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.44419, 1.50873, 3.90695 )
shape = SubResource( 8 )

[node name="StaticBody" type="StaticBody" parent="TrampaPanel" index="4"]

[node name="CollisionShape" type="CollisionShape" parent="TrampaPanel/StaticBody" index="0"]
shape = SubResource( 9 )

[node name="Turret1" parent="TrampaPanel" index="5" instance=ExtResource( 4 )]
transform = Transform( -1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 10.5, 4.5, 0.900001 )

[node name="Turret2" parent="TrampaPanel" index="6" instance=ExtResource( 4 )]
transform = Transform( -1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 10.5, 4.5, 6.9 )

[node name="Continue" type="Area" parent="." index="5"]

[node name="CollisionShape" type="CollisionShape" parent="Continue" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.380716, 3, 0 )
shape = SubResource( 10 )
